syntax = "proto3";

option csharp_namespace = "ISSA_IdentityService.Protos.Admin";


import "google/protobuf/timestamp.proto";
import "protos/common/application_user.proto";

message Admin
{
	string id = 1;
	bool is_delete = 2;
	string application_user_id = 3;
	ApplicationUser application_user = 4;
	google.protobuf.Timestamp created_time = 5;
	optional google.protobuf.Timestamp last_updated_time = 6;
}